# Sanctifier

./: README.md
.github/workflows/: ci.yml  rust.yml
contracts/kani-poc/: Cargo.toml
contracts/my-contract/: Cargo.toml
contracts/my-contract/test_snapshots/: fuzz_allowance_monotone_decrease.1.json  fuzz_mint_no_panic.1.json  fuzz_mint_no_panic.10.json  fuzz_mint_no_panic.11.json  fuzz_mint_no_panic.12.json  fuzz_mint_no_panic.13.json  fuzz_mint_no_panic.14.json  fuzz_mint_no_panic.15.json  fuzz_mint_no_panic.16.json  fuzz_mint_no_panic.17.json  fuzz_mint_no_panic.18.json  fuzz_mint_no_panic.19.json  fuzz_mint_no_panic.2.json  fuzz_mint_no_panic.3.json  fuzz_mint_no_panic.4.json  fuzz_mint_no_panic.5.json  fuzz_mint_no_panic.6.json  fuzz_mint_no_panic.7.json  fuzz_mint_no_panic.8.json  fuzz_mint_no_panic.9.json
contracts/my-contract/tests/: bolero_fuzz.rs  integration_tests.rs
contracts/vulnerable-contract/: Cargo.toml
frontend/app/lib/: env.ts
tooling/sanctifier-cli/: Cargo.toml
tooling/sanctifier-cli/src/: main.rs
tooling/sanctifier-cli/tests/: cli_tests.rs
tooling/sanctifier-core/src/: lib.rs
tooling/sanctifier-core/src/rules/: ledger_size.rs  mod.rs
